Fixed an issue with responsiveness on the About page

--- a/ParksService/ParksService/wwwroot/css/AboutPageStyle.css
+++ b/ParksService/ParksService/wwwroot/css/AboutPageStyle.css
@@ -43,7 +43,7 @@
 }
  
  .inner { 
-     position: absolute; 
+     position: static; 
      color: khaki; 
      background-color: #262625; 
      height: 575px; 
