--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -10,7 +10,7 @@
 </head>
 
 <div class="container body-content">
-    <button id="parks-button" class="btn btn-primary btn-sm">Refresh Parks List</button>
+    <button id="parks-button" class="btn btn-primary btn-sm" type="button">Refresh Parks List</button>
     <br />
     <br />
     <div class="row">
@@ -30,8 +30,9 @@
 </div>
 
 @section scripts {
+    <script type="module" src="~/Scripts/Helpers/APIKeys.js" ></script>
     <script type="text/javascript" src="~/Scripts/Helpers/BootBoxHelper.js"></script>
     <script type="text/javascript" src="~/Scripts/Helpers/MapOnGoogle.js"></script>
-    <script type="text/javascript" src="~/Scripts/DirectoryScripts.js"></script>
+    <script type="module" src="~/Scripts/DirectoryScripts.js"></script>
 
 }
