Hid "Refresh Parks List" button from Directory page
Reasoning explained in documentation

--- a/ParksService/ParksService/Views/Home/Directory.cshtml
+++ b/ParksService/ParksService/Views/Home/Directory.cshtml
@@ -10,7 +10,7 @@
 </head>
 
 <div class="container body-content">
-    <button id="parks-button" class="btn btn-primary btn-sm" type="button">Refresh Parks List</button>
+    <!-- <button id="parks-button" class="btn btn-primary btn-sm" type="button">Refresh Parks List</button> -->
     <br />
     <br />
     <div class="row">
