--- a/ParksService/ParksService/Views/Shared/_Layout.cshtml
+++ b/ParksService/ParksService/Views/Shared/_Layout.cshtml
@@ -27,24 +27,15 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Welcome </a>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About<span class="sr-only">(current)</span></a>
-                                <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Explore">Explore</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Directory">Directory</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">NPS 2018</a>
-                            </li>
-                        </ul>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Explore">Explore</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Directory">Directory</a>
+                </li>
                 </ul>
             </div>
         </div>
@@ -55,7 +46,8 @@
         <hr />
     </div>*@
     <footer class="footer container-fluid">
-        <span class="text-muted">&copy; 2018 - ParksService</span>
+        <span class="text-muted">&copy; Parks Service 2018</span>
+        <span class="text-muted"> - Kelsey Osos, <a href="https://github.com/OsosKP" target="_blank">GitHub</a></span>
     </footer>
 
     <environment include="Development">
