Improved JS code quality and removed API key

--- a/ParksService/ParksService/Views/Home/About.cshtml
+++ b/ParksService/ParksService/Views/Home/About.cshtml
@@ -114,7 +114,7 @@
             attachEventToButtons();
         });
 
-        var attachEventToButtons = function() {
+        const attachEventToButtons = function() {
             $(".btn-info, .btn-circle").on("click",
                 function() {
                     let attr = $(this).attr("data-toggle-id");
