--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <link rel="stylesheet" href="~/css/indexParallax.css" />
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 <div id="nps-parallax">
 
