Fix index page source not opening in new tab, add line about non-affiliation

--- a/ParksService/ParksService/Views/Home/Index.cshtml
+++ b/ParksService/ParksService/Views/Home/Index.cshtml
@@ -144,7 +144,8 @@
                 close-to-home recreational opportunities.
             </h4>
             <br />
-            <p style="        font-size: small"><a href="https://www.nps.gov/articles/quick-nps-history.htm">Source</a></p>
+            <p style="font-size: small"><a href="https://www.nps.gov/articles/quick-nps-history.htm" target="_blank">Source</a></p>
+            <p style="font-size: small">This website is not affiliated with the National Park Service.</p>
         </div>
 
     </section>
